chore: Update repositories method signature to return Flowable instead of Single<Collection>
Fixes gravitee-io/issues#5480